<resources>
    <string name="app_name">Smart Radio</string>

    <!-- app shortcuts -->
    <string name="shortcut_last_station_short_label">Last station</string>
    <string name="shortcut_last_station_long_label">Play last station</string>
    <string name="shortcut_last_station_disabled_message">Shortcut for playback of last station disabled.</string>

    <!-- menu entries -->
    <string name="menu_about">About</string>
    <string name="menu_howto">How to use</string>
    <string name="menu_refresh">Refresh list</string>
    <string name="menu_timer">Sleep timer</string>
    <string name="menu_icon">Change icon</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_shortcut">Place on Home screen</string>

    <!-- headers -->
    <string name="header_about">About</string>
    <string name="header_howto">How to use</string>

    <!-- descriptions -->
    <string name="descr_app_icon">App icon depicting an old radio</string>
    <string name="descr_arrow_upward">Arrow facing upward</string>
    <string name="descr_station_options_button">Display options for radio station</string>
    <string name="descr_station_icon">Icon of radio station</string>
    <string name="descr_station_name">Name of radio station</string>
    <string name="descr_station_metadata">Metadata (Artist / Title) of currently playing radio station</string>
    <string name="descr_station_name_example">Example FM</string>
    <string name="descr_station_metadata_example">Artist - Title</string>
    <string name="descr_station_stream_loading">Loading stream …</string>
    <string name="descr_playback_button">Playback button</string>
    <string name="descr_playback_indicator">Indicator for running playback</string>
    <string name="descr_playback_indicator_started">Indicator for running playback</string>
    <string name="descr_timer_icon">Sleep timer icon</string>
    <string name="descr_timer_indicator_started">Indicator for running sleep timer</string>
    <string name="descr_player_sheet_button_expand">Button to expand and minimize the radio player</string>
    <string name="descr_player_sheet_information_icon">Information Icon</string>
    <string name="descr_player_sheet_content_copy_icon">Content copy icon</string>
    <string name="descr_player_sheet_p_station_name">Name of selected radio station</string>
    <string name="descr_player_sheet_p_station_metadata">Metadata from selected radio station</string>
    <string name="descr_player_sheet_p_stream_url">Streaming link of selected radio station</string>
    <string name="descr_list_add_new">Add a new station</string>
    <string name="descr_list_add_select_stream_dropdown">Dropdown menu that hold a selection of streams</string>

    <!-- player -->
    <string name="player_sheet_h1_details">Details</string>
    <string name="player_sheet_h2_current_session">Current session</string>
    <string name="player_sheet_h2_station_name">Station</string>
    <string name="player_sheet_h2_station_metadata">Currently playing</string>
    <string name="player_sheet_h2_stream_url">Streaming link</string>
    <string name="player_sheet_p_station_metadata">no metadata available</string>
    <string name="player_sheet_h2_station_mime_type">MIME type</string>
    <string name="player_sheet_h2_station_channel_count">Channel count</string>
    <string name="player_sheet_h2_station_sample_rate">Sample rate</string>
    <string name="player_sheet_h2_station_bitrate">Bitrate</string>

    <!-- dialogs -->
    <string name="dialog_generic_button_okay">Okay</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_add_station_button">Add</string>
    <string name="dialog_add_station_input_hint">Paste streaming link</string>
    <string name="dialog_add_station_message">Add new station</string>
    <string name="dialog_add_station_howto">You can add raw audio streams encoded in MP3, AAC and Ogg/Opus as well as streams encapsulated in PLS or M3U files. Alternatively you can add new stations by tapping on streaming links (.pls or .m3u) in your web browser.</string>
    <string name="dialog_delete_station_message">Delete station</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_rename_station_input_hint">Enter a new name</string>
    <string name="dialog_rename_station_message">Rename station</string>
    <string name="dialog_button_rename">Rename</string>
    <string name="dialog_add_station_choose_stream_heading">Multiple streams found</string>
    <string name="dialog_add_station_choose_stream_message">Please select a stream</string>
    <string name="dialog_add_station_choose_stream_button">Select</string>

    <!-- error dialogs -->
    <string name="dialog_error_title_default">Error</string>
    <string name="dialog_error_message_default">An error occurred</string>
    <string name="dialog_error_details_button_default">Show details</string>
    <string name="dialog_error_details_default">No details available</string>
    <string name="dialog_error_details_write">This station is probably a duplicate or else you might want to check your external storage.</string>
    <string name="dialog_error_title_fetch_download">Download Issue</string>
    <string name="dialog_error_title_fetch_read">Read Issue</string>
    <string name="dialog_error_title_fetch_write">Write Issue</string>
    <string name="dialog_error_message_fetch_general_external_storage">External storage:</string>
    <string name="dialog_error_message_fetch_general_hint_m3u">Hint: Transistor can only process MP3, AAC and Ogg/Opus encoded streams or links ending in .m3u or .pls.</string>
    <string name="dialog_error_message_fetch_general_playlist_type">MIME type of file:</string>
    <string name="dialog_error_message_fetch_general_stream_type">MIME type of stream:</string>
    <string name="dialog_error_message_fetch_general_file_content">Content of file:</string>
    <string name="dialog_error_message_fetch_download">Transistor tried hard but could not make sense of the link.</string>
    <string name="dialog_error_message_fetch_download_station_url">Streaming link of station:</string>
    <string name="dialog_error_message_fetch_read">Transistor tried hard but could not make sense of the file.</string>
    <string name="dialog_error_message_fetch_read_file_location">Location of file:</string>
    <string name="dialog_error_message_fetch_write">Transistor tried hard but could not save the station.</string>

    <!-- messages -->
    <string name="actioncall_message_start_here">Add a new station</string>
    <string name="toastmessage_add_download_started">Download started.</string>
    <string name="toastmessage_add_open_file_started">Opening file.</string>
    <string name="toastmessage_long_press_playback_stopped">Playback stopped (long press detected)</string>
    <string name="toastmessage_long_press_playback_started">Playback started (long press detected)</string>
    <string name="toastmessage_long_press_change_icon">Change station icon (long press detected)</string>
    <string name="toastmessage_long_press_change_name">Rename station (long press detected)</string>
    <string name="toastmessage_theme_night">Switching to Night mode (long press detected)</string>
    <string name="toastmessage_theme_day">Switching to Day mode (long press detected)</string>
    <string name="toastmessage_theme_follow_system">Switching to Follow System Setting mode (long press detected)</string>
    <string name="toastmessage_shortcut_created">Shortcut created.</string>
    <string name="toastmessage_shortcut_not_created">Shortcut not created. This device does not allow the creation of shortcuts.</string>
    <string name="toastmessage_list_refreshed">Reloading list of stations.</string>
    <string name="toastmessage_copied_to_clipboard_url">Streaming link copied to clipboard.</string>
    <string name="toastmessage_copied_to_clipboard_metadata">Metadata copied to clipboard.</string>
    <string name="toastmessage_station_copied">Station copied to clipboard.</string>
    <string name="toastmessage_stream_may_not_work">Unsupported audio format detected. Playback of stream may not work properly.</string>
    <string name="toastmessage_timer_activated">Sleep timer activated.</string>
    <string name="toastmessage_timer_cancelled">Sleep timer cancelled.</string>
    <string name="toastmessage_timer_duration_increased">Duration increased.</string>
    <string name="toastmessage_timer_start_unable">Please start playback first.</string>
    <string name="toastalert_unable_to_connect">Unable to connect. Device does not have an internet connection or stream may be outdated.</string>
    <string name="toastalert_rename_unsuccessful">Unable to rename station. Please choose a different name.</string>
    <string name="toastalert_delete_successful">The station was removed.</string>
    <string name="toastalert_no_external_storage">Unable to access external storage.</string>
    <string name="toastalert_no_image_picker">No image picker available. Consider installing a Gallery application.</string>
    <string name="toastalert_headphones_unplugged">Headphones unplugged. Playback stopped.</string>
    <string name="toastalert_permission_denied">Permission denied:</string>
    <string name="toastalert_station_not_found">Unable to find station.</string>
    <string name="toastalert_stream_not_found">Transistor does not recognize this station. Please delete and add it again to the Home screen.</string>
    <string name="snackbar_request_storage_access">Transistor needs to be granted read permissions to be able access data from external storage.</string>
    <string name="snackbar_message_timer_set">Sleep timer set to</string>

    <!-- notification -->
    <string name="notification_play">Play</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_swipe_to_stop">Swipe to stop</string>
    <string name="notification_playing">Playing</string>
    <string name="notification_channel_playback_name">Playback Controls</string>
    <string name="notification_channel_playback_description">Playback controls, station logo and now playing info.</string>

    <!-- onboarding -->
    <string name="onboarding_app_description">Radio App</string>
    <string name="onboarding_app_get_started">Get started</string>

    <!-- do not translate -->
    <string name="onboarding_app_rodriguez_quote_1" translatable="false">It started out with butterflies</string>
    <string name="onboarding_app_rodriguez_quote_2" translatable="false">On a velvet afternoon</string>
    <string name="player_sheet_p_no_data" translatable="false">-</string>
</resources>
