<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:auto="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/layout_player"
        android:layout_height="match_parent"
        android:background="@drawable/shape_player_sheet_background"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="16dp"
        android:visibility="visible"
        auto:behavior_hideable="false"
        auto:behavior_peekHeight="72dp"
        auto:layout_behavior="@string/bottom_sheet_behavior"
        tools:layout_editor_absoluteY="25dp"
        tools:showIn="@layout/fragment_station">

    <View
            android:id="@+id/player_background"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:background="@drawable/shape_player_background"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintHorizontal_bias="0.0"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/player_station_image"
            android:layout_width="@dimen/design_fab_size_normal"
            android:layout_height="@dimen/design_fab_size_normal"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/descr_station_icon"
            auto:layout_constraintStart_toStartOf="@+id/player_background"
            auto:layout_constraintTop_toTopOf="parent"
            auto:srcCompat="@drawable/ic_circle_large_grey_36dp" />

    <ImageButton
            android:id="@+id/player_playback_button"
            android:layout_width="@dimen/design_fab_size_normal"
            android:layout_height="@dimen/design_fab_size_normal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_circle_large_56dp"
            android:contentDescription="@string/descr_playback_button"
            auto:layout_constraintEnd_toEndOf="@+id/player_background"
            auto:layout_constraintTop_toTopOf="parent"
            auto:srcCompat="@drawable/ic_play_arrow_white_36dp" />

    <TextView
            android:id="@+id/player_station_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/descr_station_name_example"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/descr_station_name_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/player_sheet_text_main"
            auto:layout_constraintBottom_toTopOf="@+id/player_station_metadata"
            auto:layout_constraintEnd_toStartOf="@+id/player_playback_button"
            auto:layout_constraintStart_toEndOf="@+id/player_station_image"
            auto:layout_constraintTop_toTopOf="@+id/player_background" />

    <TextView
            android:id="@+id/player_station_metadata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/descr_station_metadata_example"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/descr_station_metadata_example"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            android:visibility="visible"
            auto:layout_constraintBottom_toBottomOf="@+id/player_background"
            auto:layout_constraintEnd_toStartOf="@+id/player_playback_button"
            auto:layout_constraintStart_toEndOf="@+id/player_station_image"
            auto:layout_constraintTop_toBottomOf="@+id/player_station_name" />

    <TextView
            android:id="@+id/player_sheet_h1_details"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="82dp"
            android:text="@string/player_sheet_h1_details"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            android:textStyle="bold"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_station_image" />

    <ImageButton
            android:id="@+id/player_sheet_timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/descr_timer_icon"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_station_image"
            auto:srcCompat="@drawable/ic_timer_inverted_24dp" />

    <ImageButton
            android:id="@+id/player_sheet_station_options_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/descr_station_options_button"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_station_image"
            auto:srcCompat="@drawable/ic_more_vert_white_24dp" />

    <TextView
            android:id="@+id/player_sheet_h2_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/player_sheet_h2_current_session"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            android:visibility="gone"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h1_details" />

    <TextView
            android:id="@+id/player_sheet_p_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_sheet_p_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            android:visibility="gone"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_h2_session"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h2_session" />


    <TextView
            android:id="@+id/player_sheet_h2_metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:text="@string/player_sheet_h2_station_metadata"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_p_session" />

    <TextView
            android:id="@+id/player_sheet_p_metadata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descr_player_sheet_p_station_metadata"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/player_sheet_p_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintEnd_toStartOf="@+id/player_sheet_metadata_copy_button"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_h2_metadata"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h2_metadata" />

    <ImageButton
            android:id="@+id/player_sheet_metadata_copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/descr_player_sheet_content_copy_icon"
            android:paddingStart="16dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintTop_toTopOf="@+id/player_sheet_p_metadata"
            auto:srcCompat="@drawable/ic_content_copy_grey_24dp" />

    <TextView
            android:id="@+id/player_sheet_h2_stream_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:text="@string/player_sheet_h2_stream_url"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_p_metadata" />

    <TextView
            android:id="@+id/player_sheet_p_stream_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descr_player_sheet_p_stream_url"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/player_sheet_p_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintEnd_toStartOf="@+id/player_sheet_stream_url_copy_button"
            auto:layout_constraintHorizontal_bias="0.0"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_h2_stream_url"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h2_stream_url" />

    <ImageButton
            android:id="@+id/player_sheet_stream_url_copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/descr_player_sheet_content_copy_icon"
            android:paddingStart="16dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintTop_toTopOf="@+id/player_sheet_p_stream_url"
            auto:srcCompat="@drawable/ic_content_copy_grey_24dp" />

    <TextView
            android:id="@+id/player_sheet_h2_mime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:text="@string/player_sheet_h2_station_mime_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_p_stream_url" />

    <TextView
            android:id="@+id/player_sheet_p_mime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_sheet_p_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_h2_mime"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h2_mime" />

    <TextView
            android:id="@+id/player_sheet_h2_samplerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/player_sheet_h2_station_sample_rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_p_mime" />

    <TextView
            android:id="@+id/player_sheet_p_samplerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/player_sheet_p_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintBottom_toBottomOf="parent"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_h2_samplerate"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h2_samplerate" />

    <TextView
            android:id="@+id/player_sheet_h2_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/player_sheet_h2_station_channel_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_p_stream_url" />

    <TextView
            android:id="@+id/player_sheet_p_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_sheet_p_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_h2_channels"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h2_channels" />

    <TextView
            android:id="@+id/player_sheet_h2_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/player_sheet_h2_station_bitrate"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/player_sheet_text_details"
            android:visibility="gone"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_p_channels"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_p_channels" />

    <TextView
            android:id="@+id/player_sheet_p_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_sheet_p_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/player_sheet_text_details"
            android:visibility="gone"
            auto:layout_constraintStart_toStartOf="@+id/player_sheet_h2_bitrate"
            auto:layout_constraintTop_toBottomOf="@+id/player_sheet_h2_bitrate" />

</android.support.constraint.ConstraintLayout>